src/objects/Problem__c.object
<CustomObject>
    <fields>
        <fullName>ALJ_Hearing_Detail__c</fullName>
        <label>ALJ Hearing - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ALJ_Hearing__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered CA</fullName>
                </value>
                <value>
                    <fullName>DHCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALJ_Hearing__c</fullName>
        <label>ALJ Hearing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Appeal_Detail__c</fullName>
        <label>Agency Appeal - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agency_Appeal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCI/CMC Health Care</fullName>
                </value>
                <value>
                    <fullName>CDI</fullName>
                </value>
                <value>
                    <fullName>County Indigent Care program</fullName>
                </value>
                <value>
                    <fullName>County - IHSS</fullName>
                </value>
                <value>
                    <fullName>Covered CA</fullName>
                </value>
                <value>
                    <fullName>DHCS</fullName>
                </value>
                <value>
                    <fullName>DMHC Complaint</fullName>
                </value>
                <value>
                    <fullName>DMHC IMR</fullName>
                </value>
                <value>
                    <fullName>DOL</fullName>
                </value>
                <value>
                    <fullName>Medicare Appeal Council Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Appeal__c</fullName>
        <label>Agency Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Owed__c</fullName>
        <inlineHelpText>If the client has high bills or debt, what do they owe? (required if Problem is &quot;Affordability problems...&quot; or &quot;Billing/charges...&quot;</inlineHelpText>
        <label>Amount Owed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appeal_Agency_Other__c</fullName>
        <label>Appeal Agency - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Problem_Other__c</fullName>
        <label>Appeal Problem - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Assistance__c</fullName>
        <label>Application Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Agent/Broker</fullName>
                </value>
                <value>
                    <fullName>Application Assister</fullName>
                </value>
                <value>
                    <fullName>Exchange Service Center</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Eligibility_Problem__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CalHEERS online system</fullName>
                </value>
                <value>
                    <fullName>Exchange service center</fullName>
                </value>
                <value>
                    <fullName>Paper SSApp</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Breast and Cervical Cancer Treatment Program</fullName>
                </value>
                <value>
                    <fullName>CHDP Gateway</fullName>
                </value>
                <value>
                    <fullName>Healthy-e application</fullName>
                </value>
                <value>
                    <fullName>Mail-in to county</fullName>
                </value>
                <value>
                    <fullName>Outstationed location</fullName>
                </value>
                <value>
                    <fullName>Phone-in</fullName>
                </value>
                <value>
                    <fullName>School lunch</fullName>
                </value>
                <value>
                    <fullName>Single point of entry</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Automatic Enrollment</fullName>
                </value>
                <value>
                    <fullName>County Welfare Office</fullName>
                </value>
                <value>
                    <fullName>SSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTM__c</fullName>
        <label>CTM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Disability_Access_Issue__c</fullName>
        <description>Formerly labeled &quot;Problem - Detail&quot;</description>
        <inlineHelpText>1) Reason denied, delayed or proposed for termination
2) Reason &quot;Has not applied&quot;
3) Affordability problems, Billing/charges detail
4) Physical Disability Problem Details</inlineHelpText>
        <label>Disability Access Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applications made but not processed timely, including payments not processed timely</fullName>
                </value>
                <value>
                    <fullName>Assets/Resources</fullName>
                </value>
                <value>
                    <fullName>BIC/Insurance card delay</fullName>
                </value>
                <value>
                    <fullName>Citizenship verification</fullName>
                </value>
                <value>
                    <fullName>Covered Ca/Medi-Cal disconnect</fullName>
                </value>
                <value>
                    <fullName>Excessive verification required</fullName>
                </value>
                <value>
                    <fullName>Failure to provide verification</fullName>
                </value>
                <value>
                    <fullName>Finding of non-disability</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Non-financial reasons</fullName>
                </value>
                <value>
                    <fullName>Not assessed for all proper programs</fullName>
                </value>
                <value>
                    <fullName>Premium payment problem</fullName>
                </value>
                <value>
                    <fullName>Website problems prevent application from being submitted</fullName>
                </value>
                <value>
                    <fullName>Website problems prevent confirmation that application is being processed</fullName>
                </value>
                <value>
                    <fullName>Application too confusing</fullName>
                </value>
                <value>
                    <fullName>Don’t know how/where to apply</fullName>
                </value>
                <value>
                    <fullName>Limited access to internet</fullName>
                </value>
                <value>
                    <fullName>Lost letter</fullName>
                </value>
                <value>
                    <fullName>Needs additional information</fullName>
                </value>
                <value>
                    <fullName>Needs language assistance</fullName>
                </value>
                <value>
                    <fullName>Not aware eligible for program</fullName>
                </value>
                <value>
                    <fullName>Hearing Impaired</fullName>
                </value>
                <value>
                    <fullName>Visually Impaired</fullName>
                </value>
                <value>
                    <fullName>Wheel-chair accessible</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar_Amount_for_Revenue_Recovery__c</fullName>
        <label>Dollar Amount for Revenue Recovery</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligibility_Outcome_Detail__c</fullName>
        <label>Eligibility Outcome - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer’s application is being processed</fullName>
                </value>
                <value>
                    <fullName>Consumer made eligible for program</fullName>
                </value>
                <value>
                    <fullName>Consumer continued eligibility</fullName>
                </value>
                <value>
                    <fullName>Consumer assessed for appropriate program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Problem__c</fullName>
        <label>Eligibility Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACA: Dependent Coverage to Age 26</fullName>
                </value>
                <value>
                    <fullName>ACA: Foster care extension</fullName>
                </value>
                <value>
                    <fullName>ACA: Limitations on out-of-pocket costs &amp; deductibles</fullName>
                </value>
                <value>
                    <fullName>ACA: Pre-existing condition exclusion</fullName>
                </value>
                <value>
                    <fullName>ACA:  tax penalty exemption problem</fullName>
                </value>
                <value>
                    <fullName>Affordability problems (share-of-cost, premiums, APTC calculations, etc.)</fullName>
                </value>
                <value>
                    <fullName>Application denied</fullName>
                </value>
                <value>
                    <fullName>Application processing delayed</fullName>
                </value>
                <value>
                    <fullName>Client afraid to apply because of public charge</fullName>
                </value>
                <value>
                    <fullName>Client ineligible for program</fullName>
                </value>
                <value>
                    <fullName>Client unaware of program rules</fullName>
                </value>
                <value>
                    <fullName>Covered CA: APTC reconciliation problem</fullName>
                </value>
                <value>
                    <fullName>Has not applied</fullName>
                </value>
                <value>
                    <fullName>Liens/estate claims</fullName>
                </value>
                <value>
                    <fullName>Coverage is rescinded, terminated or proposed for termination</fullName>
                </value>
                <value>
                    <fullName>Language, Cultural or Racial barrier</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal: Inter-County transfer</fullName>
                </value>
                <value>
                    <fullName>Part D LIS Reassignment</fullName>
                </value>
                <value>
                    <fullName>Not aware of program</fullName>
                </value>
                <value>
                    <fullName>Other eligibility problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_to_Agency_Detail__c</fullName>
        <label>Escalation to Agency - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Escalation_to_Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County Indigent Care Program</fullName>
                </value>
                <value>
                    <fullName>County - IHSS</fullName>
                </value>
                <value>
                    <fullName>Covered CA</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal County</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Managed Care Ombuds</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Health Care Options</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Mental Health Care Ombuds</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_to_Agency_Other__c</fullName>
        <label>Escalation to Agency - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_to_Agency__c</fullName>
        <label>Escalation to Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedited__c</fullName>
        <label>Expedited?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Member_Name__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/Contact/&quot;&amp; Family_Member__r.Id &amp;&quot;/view&quot;, Family_Member__r.FirstName &amp;&quot; &quot;&amp; Family_Member__r.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Member__c</fullName>
        <label>Family Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grievance_Against_Plan__c</fullName>
        <label>Grievance Against Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHS_Appeal_Detail__c</fullName>
        <label>HHS Appeal - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HHS_Appeal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS Tax Exemptions</fullName>
                </value>
                <value>
                    <fullName>HHS, Office of Civil Rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHS_Appeal__c</fullName>
        <label>HHS Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HIPPA_Violation__c</fullName>
        <label>HIPPA Violation?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Problem__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Plan__c</fullName>
        <label>Health Plan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Managed_Care__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HCA_Health_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Program__c</fullName>
        <label>Health Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Health_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Appeal__c</fullName>
        <formula>IF(
   ISPICKVAL(Judicial_Review__c,&quot;Yes&quot;),
   &quot;Judicial Review&quot;,
   IF(
      ISPICKVAL(HHS_Appeal__c,&quot;Yes&quot;),
      &quot;HHS Appeal&quot;,
      IF(
         ISPICKVAL(ALJ_Hearing__c,&quot;Yes&quot;),
         &quot;ALJ Hearing&quot;,
         IF(
            ISPICKVAL(Agency_Appeal__c,&quot;Yes&quot;), 
            &quot;Agency Appeal&quot;,
            IF(
               ISPICKVAL(Grievance_Against_Plan__c,&quot;Yes&quot;),
               &quot;Grievance Against Plan&quot;,
               IF(
                  ISPICKVAL(Informal_Review_with_Plan__c,&quot;Yes&quot;),
                  &quot;Informal Review with Plan&quot;,
                  IF(
                     ISPICKVAL(Escalation_to_Agency__c,&quot;Yes&quot;),
                     &quot;Escalation to Agency&quot;,
                     &quot;No Appeal&quot;
                  )
               )
            )
         )
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Level of Appeal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informal_Review_with_Plan__c</fullName>
        <label>Informal Review with Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Judicial_Review__c</fullName>
        <label>Judicial Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LIS_Update_Problem__c</fullName>
        <label>LIS Update Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>[TBD]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Provider__c</fullName>
        <label>Local Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[org specific]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MLP_Problem__c</fullName>
        <label>MLP Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Has not applied</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CalWorks</fullName>
                </value>
                <value>
                    <fullName>Calworks - has not applied</fullName>
                </value>
                <value>
                    <fullName>Calworks - improper benefit amount</fullName>
                </value>
                <value>
                    <fullName>Calworks - other</fullName>
                </value>
                <value>
                    <fullName>Calworks - overpayment</fullName>
                </value>
                <value>
                    <fullName>Calworks - public charge fear</fullName>
                </value>
                <value>
                    <fullName>Calworks - termination or proposed termination</fullName>
                </value>
                <value>
                    <fullName>Consumer Debt</fullName>
                </value>
                <value>
                    <fullName>Consumer fraud</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Employment - conditions/improper compensation (worker&apos;s rights)</fullName>
                </value>
                <value>
                    <fullName>Employment - discrimination/wrong term</fullName>
                </value>
                <value>
                    <fullName>Employment - needs job (workforce development)</fullName>
                </value>
                <value>
                    <fullName>Employment - other</fullName>
                </value>
                <value>
                    <fullName>Employment - unemployment benefits</fullName>
                </value>
                <value>
                    <fullName>Employment - unemployment disability benefits (SDI)</fullName>
                </value>
                <value>
                    <fullName>Employment - worker’s comp</fullName>
                </value>
                <value>
                    <fullName>Family Law</fullName>
                </value>
                <value>
                    <fullName>Family law - child support</fullName>
                </value>
                <value>
                    <fullName>Family law - custody</fullName>
                </value>
                <value>
                    <fullName>Family law - dependency court</fullName>
                </value>
                <value>
                    <fullName>Family law - divorce</fullName>
                </value>
                <value>
                    <fullName>Family law - dv</fullName>
                </value>
                <value>
                    <fullName>Family law - guardianship</fullName>
                </value>
                <value>
                    <fullName>Family law - other</fullName>
                </value>
                <value>
                    <fullName>Food Security - no place to purchase healthy foods</fullName>
                </value>
                <value>
                    <fullName>Food Security - unable to afford food</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Care__c</fullName>
        <label>Managed Care?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medi_Cal_Type__c</fullName>
        <label>Medi-Cal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1931 (b)</fullName>
                </value>
                <value>
                    <fullName>250% Working Disabled</fullName>
                </value>
                <value>
                    <fullName>Accelerated Enrollment</fullName>
                </value>
                <value>
                    <fullName>Aged, Blind or Disabled</fullName>
                </value>
                <value>
                    <fullName>Breast &amp; Cervical Cancer Treatment Program (state only)</fullName>
                </value>
                <value>
                    <fullName>CalFresh Express Lane Eligibility</fullName>
                </value>
                <value>
                    <fullName>CalWORKS-linked</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Continuing Eligibility for Children</fullName>
                </value>
                <value>
                    <fullName>Emergency-only</fullName>
                </value>
                <value>
                    <fullName>Federal Poverty Level for aged/disabled</fullName>
                </value>
                <value>
                    <fullName>Federal Poverty Level for children</fullName>
                </value>
                <value>
                    <fullName>Former Foster Youth</fullName>
                </value>
                <value>
                    <fullName>Foster care</fullName>
                </value>
                <value>
                    <fullName>Home and community based waiver program</fullName>
                </value>
                <value>
                    <fullName>Hospital PE</fullName>
                </value>
                <value>
                    <fullName>Long term care</fullName>
                </value>
                <value>
                    <fullName>Medically needy/share of cost</fullName>
                </value>
                <value>
                    <fullName>Minor consent</fullName>
                </value>
                <value>
                    <fullName>New Adult/expansion group VIII</fullName>
                </value>
                <value>
                    <fullName>Newborn Deeming</fullName>
                </value>
                <value>
                    <fullName>Other Special Program (Dialysis, TPN &amp; TB)</fullName>
                </value>
                <value>
                    <fullName>Parents/Caretaker Relative</fullName>
                </value>
                <value>
                    <fullName>Pregnant Women—Pregnancy Related</fullName>
                </value>
                <value>
                    <fullName>Presumptive (disabled/pregnant)</fullName>
                </value>
                <value>
                    <fullName>Qualified disabled working individual</fullName>
                </value>
                <value>
                    <fullName>Refugee Medical Assistance</fullName>
                </value>
                <value>
                    <fullName>School lunch express enrollment</fullName>
                </value>
                <value>
                    <fullName>SSI linked</fullName>
                </value>
                <value>
                    <fullName>Targeted Low-income Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Type_Detail__c</fullName>
        <label>Medicare Type - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Health_Program__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic Enrollment</fullName>
                </value>
                <value>
                    <fullName>County Welfare Office</fullName>
                </value>
                <value>
                    <fullName>SSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Type_s__c</fullName>
        <label>Medicare Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Health_Program__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HCA_Medicare_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_Comment_Notes__c</fullName>
        <label>Outcome Comment/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Type__c</fullName>
        <label>Outcome Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>MLP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HCA_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_of_Appeal__c</fullName>
        <label>Outcome of Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Granted Client Claim</fullName>
                </value>
                <value>
                    <fullName>Problem resolved after agency escalation</fullName>
                </value>
                <value>
                    <fullName>Favorable Conditional Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Denied Client Claim</fullName>
                </value>
                <value>
                    <fullName>Program declined representation due to lack of merits</fullName>
                </value>
                <value>
                    <fullName>Client withdrew hearing request</fullName>
                </value>
                <value>
                    <fullName>Client Declined Our Services/Loss of Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Health_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescription_Drug_Other__c</fullName>
        <label>Prescription Drug - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescription_Drug__c</fullName>
        <label>Prescription Drug</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Needed__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formulary Issues</fullName>
                </value>
                <value>
                    <fullName>Medication therapy management</fullName>
                </value>
                <value>
                    <fullName>Part D card did not work at pharmacy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Other__c</fullName>
        <label>Problem - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <formula>CASE(  RecordType.Name  , 
       &apos;Eligibility Problem&apos;,  TEXT( Eligibility_Problem__c ), 
       &apos;MLP Problem&apos;,  TEXT( MLP_Problem__c ) ,
       &apos;Service Problem&apos;, TEXT ( Service_Problem__c ),
 &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem</label>
        <type>Text</type>
    </fields>
</CustomObject>